<resources>
    <string name="app_name">Shopping Points</string>
    <string name="network_error">There is some error in Network, please check…</string>
    <string name="loading">Loading…</string>
    <string name="enter_email_address">Enter mail address</string>
    <string name="enter_email_password">Enter email password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="signup">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="don_t_have_account_signup_here">Don\'t have account? Signup here</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="enter_email_add">Please enter your email.</string>
    <string name="enter_your_pass">Please enter your password.</string>
    <string name="enter_valid_email">Please enter valid email address.</string>
    <string name="enter_valid_pass">Please enter valid password with special characters.</string>
    <string name="enter_your_name">Please enter your name.</string>
    <string name="app_bar_button">appBarButton</string>
    <string name="logout">logout</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="system">system</string>
    <string name="set_app_theme">Set App Theme</string>
    <string name="menu">Menu</string>
    <string name="admin_account">Administrator Account</string>
    <string name="shopping_app">Shopping App</string>
    <string name="search">Search</string>
    <string name="add_product">Add Product</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="electronics">Electronics</string>
    <string name="clothes">Clothes</string>
    <string name="food">Food</string>
    <string name="quantity">Quantity</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>

    <string name="select_product_type">Select Product Type.</string>
    <string name="enter_product_title">Enter Product Title.</string>
    <string name="enter_product_price">Enter Product Price.</string>
    <string name="enter_product_quantity">Enter Product Quantity.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart_is_empty">cart is empty</string>
    <string name="items_in_cart">Items in cart</string>
    <string name="no_products_to_display">No Products to Display</string>
</resources>